// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionModal should show the action modal when user has logged in with ledger on default step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="step--container"
  >
    <stepcomponent-stub
      includeline="true"
      step="txDetails"
      stepname="txDetails"
      stepnumber="1"
      steptitle="Details"
    />
     
    <stepcomponent-stub
      includeline="true"
      step="txDetails"
      stepname="fees"
      stepnumber="2"
      steptitle="Fees"
    />
     
    <stepcomponent-stub
      step="submit"
      stepname="submit"
      stepnumber="3"
      steptitle="Submit"
    />
  </div>
   
  <div
    class="action-modal-form"
  />
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with ledger on fees step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="step--container"
  >
    <stepcomponent-stub
      includeline="true"
      step="fees"
      stepname="txDetails"
      stepnumber="1"
      steptitle="Details"
    />
     
    <stepcomponent-stub
      includeline="true"
      step="fees"
      stepname="fees"
      stepnumber="2"
      steptitle="Fees"
    />
     
    <stepcomponent-stub
      step="submit"
      stepname="submit"
      stepnumber="3"
      steptitle="Submit"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <tableinvoice-stub
      amount="0"
      gasestimate="0"
      gasprice="2.5e-8"
    />
     
    <!---->
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with ledger on sign step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="step--container"
  >
    <stepcomponent-stub
      includeline="true"
      step="sign"
      stepname="txDetails"
      stepnumber="1"
      steptitle="Details"
    />
     
    <stepcomponent-stub
      includeline="true"
      step="sign"
      stepname="fees"
      stepnumber="2"
      steptitle="Fees"
    />
     
    <stepcomponent-stub
      step="submit"
      stepname="submit"
      stepnumber="3"
      steptitle="Submit"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <hardwarestate-stub
      icon="info"
    >
      <div>
        
          Please use Chrome, Brave, or Opera. Ledger is not supported in your
          current browser.
        
      </div>
    </hardwarestate-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          disabled="true"
          value="Submit"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local keystore on default step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="step--container"
  >
    <stepcomponent-stub
      includeline="true"
      step="txDetails"
      stepname="txDetails"
      stepnumber="1"
      steptitle="Details"
    />
     
    <stepcomponent-stub
      includeline="true"
      step="txDetails"
      stepname="fees"
      stepnumber="2"
      steptitle="Fees"
    />
     
    <stepcomponent-stub
      step="submit"
      stepname="submit"
      stepnumber="3"
      steptitle="Submit"
    />
  </div>
   
  <div
    class="action-modal-form"
  />
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local keystore on fees step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="step--container"
  >
    <stepcomponent-stub
      includeline="true"
      step="fees"
      stepname="txDetails"
      stepnumber="1"
      steptitle="Details"
    />
     
    <stepcomponent-stub
      includeline="true"
      step="fees"
      stepname="fees"
      stepnumber="2"
      steptitle="Fees"
    />
     
    <stepcomponent-stub
      step="submit"
      stepname="submit"
      stepnumber="3"
      steptitle="Submit"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <tableinvoice-stub
      amount="0"
      gasestimate="0"
      gasprice="2.5e-8"
    />
     
    <!---->
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Next"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user has logged in with local keystore on sign step 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Action Modal
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="step--container"
  >
    <stepcomponent-stub
      includeline="true"
      step="sign"
      stepname="txDetails"
      stepnumber="1"
      steptitle="Details"
    />
     
    <stepcomponent-stub
      includeline="true"
      step="sign"
      stepname="fees"
      stepnumber="2"
      steptitle="Fees"
    />
     
    <stepcomponent-stub
      step="submit"
      stepname="submit"
      stepnumber="3"
      steptitle="Submit"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <!---->
     
    <tmformgroup-stub
      class="action-modal-group"
      fieldid="password"
      fieldlabel="Password"
    >
      <tmfield-stub
        id="password"
        placeholder="Password"
        type="password"
      />
       
      <!---->
    </tmformgroup-stub>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          disabled="true"
          value="Submit"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;

exports[`ActionModal should show the action modal when user hasn't logged in 1`] = `
<div
  class="action-modal"
  name="slide-fade"
  tabindex="0"
>
  <div
    class="action-modal-header"
  >
    <span
      class="action-modal-title"
    >
      
        Sign in required
      
    </span>
     
    <div
      class="action-modal-icon action-modal-close"
      id="closeBtn"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </div>
  </div>
   
  <div
    class="step--container"
  >
    <stepcomponent-stub
      includeline="true"
      step="txDetails"
      stepname="txDetails"
      stepnumber="1"
      steptitle="Details"
    />
     
    <stepcomponent-stub
      includeline="true"
      step="txDetails"
      stepname="fees"
      stepnumber="2"
      steptitle="Fees"
    />
     
    <stepcomponent-stub
      step="submit"
      stepname="submit"
      stepnumber="3"
      steptitle="Submit"
    />
  </div>
   
  <div
    class="action-modal-form"
  >
    <p>
      You need to sign in to submit a transaction.
    </p>
  </div>
   
  <div
    class="action-modal-footer"
  >
    <tmformgroup-stub
      class="action-modal-group"
    >
      <div>
        <tmbtn-stub
          color="primary"
          value="Sign In"
        />
      </div>
    </tmformgroup-stub>
     
    <!---->
  </div>
</div>
`;
